--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
    font-size: 15px;
     left: 185px;
     bottom: 100px;
-    color: #495057
+    color: #495057;
 }
 .Encriptar{
     width: 285px;
@@ -89,7 +89,7 @@ body {
     height: 209px;
     position: absolute;
     bottom: 20px;
-    left: 10px
+    left: 10px;
 }
 .p2{
     color: #495057;
@@ -116,7 +116,6 @@ body {
     font-weight: bold;
     display : none;
 }
-/*Css para celulares*/
 @media(max-width:480px){
     .logo-alura{
         width: 240px;
@@ -146,7 +145,7 @@ body {
         left: 25px;
         width: 500px;
         bottom: 100px;
-        color: #495057
+        color: #495057;
     }
     .Encriptar{
         width: 698px;
@@ -197,7 +196,7 @@ body {
         height: 209px;
         position: absolute;
         bottom: 50px;
-        left: 10px
+        left: 10px;
     }
     .p2{
         position: absolute;
@@ -251,7 +250,7 @@ body {
         left: 25px;
         width: 500px;
         bottom: 45px;
-        color: #495057
+        color: #495057;
     }
     .Encriptar{
         width: 358px;
@@ -301,7 +300,7 @@ body {
         height: 209px;
         position: absolute;
         bottom: 50px;
-        left: 10px
+        left: 10px;
     }
     .p2{
         position: absolute;
